--- a/front-end templates/Courses Page/css/style.css
+++ b/front-end templates/Courses Page/css/style.css
@@ -60,6 +60,23 @@ header {
   color: var(--primary-color);
 }
 
+.navbar .profile {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.navbar .profile img {
+  background-color: white;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.navbar .profile li {
+  margin: 10px;
+}
+
 @media (max-width: 768px) {
   .navbar .hide-menu {
     display: none;
@@ -102,6 +119,10 @@ header {
   .container {
     padding: 0 25px;
   }
+
+  .navbar .profile {
+    margin-left: 0px;
+  }
 }
 
 /* Search Section */
@@ -115,26 +136,34 @@ header {
 }
 
 .search-section svg {
-  position: absolute;
-  right: 25px;
+  font-size: var(--medium-text-size);
+  background-color: var(--main-text-color);
+  padding: 15px;
 }
 
 .search-section input {
   width: 100%;
-  padding: 25px;
-  border-radius: 50px;
+  padding: 15px;
+  border: none;
   color: var(--secondary-color);
   font-size: var(--small-text-size);
+}
+
+@media (max-width: 1125px){
+  .search-section input {
+    font-size: calc(var(--small-text-size) - 4px);
+  }
 }
 
 /* Filters Section */
 .filters-section {
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
 .filters-section select {
-  margin: 15px 50px 0 0;
+  margin: 15px 0;
   padding: 15px 25px;
   border-radius: 50px;
   color: var(--secondary-color);
@@ -165,7 +194,9 @@ header {
   border-radius: 25px;
   display: flex;
   flex-direction: row;
-  margin: 50px 0;
+  justify-content: space-between;
+  margin-top: 50px;
+  padding: 15px;
   cursor: pointer;
   transition: var(--transation-duration) ease-in-out;
 }
@@ -175,31 +206,22 @@ header {
 }
 
 .price-tag {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 10%;
-  height: 100%;
-  padding: 20px;
-  border-radius: 0 25px 25px 0;
-  background-color: var(--primary-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 10px 25px;
 }
 
 .price-tag p {
   font-size: var(--medium-text-size);
   font-weight: 600;
-  color: var(--main-text-color);
+  color: var(--primary-color);
 }
 
 .card-img {
   width: 40%;
-  border-radius: 25px 0 0 25px;
+  border-radius: 10px;
 }
 
 .card-text {
+  width: 50%;
   padding: 10px 20px 30px 20px;
   margin-bottom: 20px;
 }
@@ -216,14 +238,31 @@ header {
   color: var(--main-text-color);
 }
 
-@media (max-width: 1366px) {
+@media (max-width: 1024px) {
+  .card {
+    padding: 5px 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    padding: 15px;
+  }
+
+  .card-text {
+    width: 100%;
+  }
+}
+
+@media (max-width: 540px) {
 .courses-section{
   justify-content: center;
   align-items: center;
 }
 
   .card {
-    width: 80%;
+    width: 100%;
+    padding: 0;
     flex-direction: column;
   }
 
@@ -233,30 +272,30 @@ header {
   }
 
   .price-tag {
-    height: 10%;
+    position: absolute;
     bottom: 92%;
     right: 15px;
-    padding: 25px;
+    padding: 3%;
     border-radius: 50px;
     background-color: var(--primary-color);
   }
-}
-
-@media (max-width: 767px) {
-  .card{
-    width: 100%;
+  
+  .price-tag p {
+    color: var(--main-text-color);
+    font-size: calc(var(--medium-text-size) + 10px);
   }
 }
 
 /* pagination section */
 .pagination-section {
   padding: 0 30%;
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.pagination-section a {
+.pagination-section .btn {
   padding: 20px 22px;
   border-radius: 50%;
   background-color: var(--primary-color);
@@ -264,10 +303,24 @@ header {
   color: var(--main-text-color);
   transition: var(--transation-duration) ease-in-out;
   font-size: var(--small-text-size);
+  cursor: pointer;
+  border: none;
 }
 
-.pagination-section a:hover {
+.pagination-section .btn:hover {
   box-shadow: 0 0 15px white;
+}
+
+.pagination-section .btn:disabled{
+  background-color: #043216;
+  color: #999999;
+  cursor: default;
+}
+
+.pagination-section .btn:disabled:hover{
+  box-shadow: none;
+  background-color: #043216;
+  color: #999999;
 }
 
 .pagination-section p {
