--- a/front-end templates/Home Page/css/style.css
+++ b/front-end templates/Home Page/css/style.css
@@ -60,6 +60,23 @@ header {
   color: var(--primary-color);
 }
 
+.navbar .profile {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.navbar .profile img {
+  background-color: white;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.navbar .profile li {
+  margin: 10px;
+}
+
 @media (max-width: 768px) {
   .navbar .hide-menu {
     display: none;
@@ -101,6 +118,10 @@ header {
 
   .container {
     padding: 0 25px;
+  }
+
+  .navbar .profile {
+    margin-left: 0px;
   }
 }
 
@@ -176,7 +197,7 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .card {
   position: relative;
@@ -231,29 +252,14 @@ header {
   color: var(--main-text-color);
 }
 
-@media (max-width: 1332px) {
-  .latest-courses {
-    justify-content: space-around;
-  }
-  .card {
-    width: 400px;
-  }
-}
-
-@media (max-width: 1124px) {
+@media (max-width: 767px) {
   .latest-courses {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10%;
   }
 
-  .card {
-    width: 250px;
-  }
-}
-
-@media (max-width: 767px) {
-  
   .card {
     width: 100%;
   }
@@ -267,19 +273,25 @@ header {
   align-items: center;
 }
 
-.about-img {
+.about .img-container {
+  height: 100%;
   width: 40%;
-  border-radius: 35px;
+}
+
+.about-img {
+  width: 100%;
+  border-radius: 25px;
 }
 
 .about-text {
-  width: 45%;
+  width: 50%;
   display: flex;
   flex-direction: column;
+  padding-top: 5%;
 }
 
 .about-text p {
-  font-size: var(--medium-text-size);
+  font-size: var(--small-text-size);
   font-weight: 200;
   color: var(--main-text-color);
   margin-bottom: 50px;
@@ -291,7 +303,7 @@ header {
   font-weight: 600;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .about {
     flex-direction: column;
     justify-content: center;
@@ -304,10 +316,16 @@ header {
 
   .about-text{
     width: 100%;
-    padding: 50px;
+    padding: 0 50px;
     text-align: center;
   }
 
+  .about-text p {
+    font-size: calc(var(--medium-text-size) + 10px);
+  }
+}
+
+@media (max-width: 767px) {
   .about-text p {
     font-size: calc(var(--large-text-size) - 2px);
   }
@@ -330,18 +348,17 @@ header {
 }
 
 .contact div input {
-  padding: 25px;
   width: 85%;
   height: 100%;
-  font-size: var(--medium-text-size);
+  padding: 15px;
+  border-radius: 25px;
+  font-size: var(--small-text-size);
   font-weight: 400;
   color: var(--secondary-color);
-  border-radius: 25px;
 }
 
 .contact div .contact-btn-lg {
-  padding: 25px 0;
-  width: 12%;
+  padding: 10px 30px;
   cursor: pointer;
   background-color: var(--primary-color);
   font-size: var(--medium-text-size);
@@ -349,12 +366,10 @@ header {
   color: var(--main-text-color);
   border-radius: 25px;
   transition: var(--transation-duration) ease-in-out;
-  margin-bottom: 50px;
 }
 
 .contact .contact-btn-sm {
-  padding: 25px 0;
-  width: 60%;
+  padding: 10px 30px;
   cursor: pointer;
   background-color: var(--primary-color);
   font-size: var(--medium-text-size);
@@ -370,13 +385,13 @@ header {
 }
 
 .contact textarea {
-  padding: 25px;
+  padding: 15px;
   width: 100%;
-  font-size: var(--medium-text-size);
+  font-size: var(--small-text-size);
   font-weight: 400;
   color: var(--secondary-color);
   border-radius: 25px;
-  margin: 5px 0 25px 0;
+  margin: 15px 0;
 }
 
 .contact .contact-btn-sm{
