--- a/front-end templates/global/css/global.css
+++ b/front-end templates/global/css/global.css
@@ -19,7 +19,10 @@
   box-sizing: border-box;
   font-family: "JetBrains Mono", monospace;
   scroll-behavior: smooth;
-  /* direction: rtl; */
+}
+
+.arabic {
+  direction: rtl;
 }
 
 body {
