--- a/front-end templates/Register Page/style.css
+++ b/front-end templates/Register Page/style.css
@@ -1,20 +1,24 @@
-body {
+.container {
   background: url("./imgs/hero-background.jpg");
   background-size: cover;
-  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7); */
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5); */
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .RegisterForm {
   width: 60%;
-  margin: 35px auto;
   padding: 20px 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(
-    var(--primary-color),
-    var(--secondary-color)
+    #000000f1,
+    #001d02f1
   );
   color: var(--main-text-color);
   border-radius: 25px;
@@ -35,12 +39,17 @@ body {
 .RegisterForm .RadioGroup {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .RegisterForm .RadioGroup div {
-  margin: 0 25px 25px 25px;
+  padding: 15px;
+  margin-bottom:15px;
+}
+
+.RegisterForm .RadioGroup div input, label {
+  cursor: pointer;
 }
 
 .RegisterForm .CheckboxGroup {
@@ -52,6 +61,15 @@ body {
 
 .RegisterForm .CheckboxGroup input {
   margin: 0 25px;
+  cursor: pointer;
+}
+
+.RegisterForm .PaymentGroup {
+  width: 100%;
+}
+
+.RegisterForm .PaymentGroup h1 {
+  margin-bottom: 15px;
 }
 
 .RegisterForm .FileGroup {
@@ -69,17 +87,38 @@ body {
   border-radius: 15px;
 }
 
+.RegisterForm a {
+  text-decoration: none;
+  width: 100%;
+  margin-bottom: 15px;
+  color: white;
+  transition: var(--transation-duration);
+}
+
+.RegisterForm a:hover {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
 .RegisterForm .SubmitBtn {
   padding: 15px;
   border-radius: 15px;
   border: 1px solid var(--primary-color);
   cursor: pointer;
-  background-color: #ff5b5b69;
+  background-color: var(--secondary-color);
+  transition: var(--transation-duration);
+  color: var(--main-text-color);
 }
 
 .RegisterForm .SubmitBtn:hover {
   padding: 15px;
   border-radius: 15px;
   cursor: pointer;
-  background-color: #ff5b5b;
+  background-color: var(--primary-color);
+}
+
+@media (max-width: 1124px) {
+  .RegisterForm {
+    width: 100%;
+  }
 }
