--- a/front-end templates/Login Page/style.css
+++ b/front-end templates/Login Page/style.css
@@ -11,7 +11,7 @@
 
 .LoginForm {
   width: 60%;
-  padding: 20px 30px;
+  padding: 20px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +25,7 @@
 }
 
 .LoginForm h1 {
-  margin: 25px 0;
+  margin: 15px 0;
 }
 
 .LoginForm .TextGroup {
@@ -33,7 +33,7 @@
 }
 
 .LoginForm .TextGroup input {
-  margin: 15px 0 25px 0;
+  margin: 15px 0;
   width: 100%;
   padding: 10px;
   border: none;
@@ -42,8 +42,7 @@
 
 .LoginForm a {
   text-decoration: none;
-  width: 100%;
-  margin-bottom: 15px;
+  margin: 15px;
   color: white;
   transition: var(--transation-duration);
 }
