--- a/app/client/src/styles/courseDetails/page.module.css
+++ b/app/client/src/styles/courseDetails/page.module.css
@@ -4,8 +4,7 @@
     color: white;
     display: flex;
     justify-content: space-between;
-    align-items: start;
-    background: url("https://placehold.co/1280x720");
+    align-items: flext-start;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -28,6 +27,7 @@
   
   .content .imgPart {
     width: 40%;
+    height: 500px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,6 +36,8 @@
   
   .content .imgPart img {
     width: 100%;
+    height: 80%;
+    background-color: white;
     border-radius: 25px;
   }
   
@@ -50,6 +52,7 @@
     margin-top: 15px;
     cursor: pointer;
     transition: all ease-in-out var(--transation-duration);
+    text-align: center;
   }
   
   .content .imgPart .purchaseBtn:hover {
@@ -94,7 +97,8 @@
     transition: all ease-in-out var(--transation-duration);
   }
   
-  .videosList ul li:hover {
+  .videosList ul li:hover,
+  .videosList ul li:hover a{
     color: var(--primary-color);
   }
   
@@ -104,6 +108,7 @@
   .videosList ul li a {
     text-decoration: none;
     color: white;
+    transition: all ease-in-out var(--transation-duration);
   }
   
   @media (max-width: 768px) {
@@ -126,11 +131,11 @@
     }
   
     .videosList {
-      padding: 25px 15px;
+      padding: 25px 0;
     }
   
     .videosList h3 {
-      margin: 5px 0;
+      margin: 5px 0 0 15px;
     }
   
     .videosList ul li {
