--- a/app/client/src/styles/courses/page.module.css
+++ b/app/client/src/styles/courses/page.module.css
@@ -25,7 +25,7 @@
   font-size: var(--small-text-size);
 }
 
-.searchSection input:focus{
+.searchSection input:focus {
   outline: none;
 }
 
@@ -59,11 +59,9 @@
 /* Courses Section */
 .coursesSection {
   padding: 50px 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  gap: 5%;
 }
 
 .card {
@@ -118,49 +116,16 @@
 }
 
 @media (max-width: 1024px) {
-  .card {
-    padding: 5px 15px;
+  .coursesSection {
+    grid-template-columns: auto auto;
   }
 }
 
 @media (max-width: 768px) {
-  .card {
-    padding: 15px;
-  }
-
-  .cardText {
-    width: 100%;
-  }
-}
-
-@media (max-width: 540px) {
   .coursesSection {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .card {
-    width: 100%;
-    padding: 0;
-    flex-direction: column;
-  }
-
-  .cardImg {
-    width: 100%;
-    border-radius: 25px 25px 0 0;
-  }
-
-  .priceTag {
-    position: absolute;
-    bottom: 92%;
-    right: 15px;
-    padding: 3%;
-    border-radius: 50px;
-    background-color: var(--primary-color);
-  }
-
-  .priceTag p {
-    color: var(--main-text-color);
-    font-size: calc(var(--medium-text-size) + 10px);
+    grid-template-columns: auto;
+    padding: 50px 10%;
   }
 }
+
+
