--- a/app/client/src/styles/register/page.module.css
+++ b/app/client/src/styles/register/page.module.css
@@ -1,5 +1,5 @@
 .container {
-  background: url("../../../../public/hero-background.jpg");
+  background: url("../../../public/hero-background.jpg");
   background-size: cover;
   height: 100vh;
   display: flex;
@@ -9,7 +9,7 @@
 }
 
 .RegisterForm {
-  width: 50%;
+  width: 600px;
   padding: 20px 50px;
   display: flex;
   flex-direction: column;
@@ -23,6 +23,7 @@
 .RegisterForm h1 {
   margin: 15px;
   font-size: var(--medium-text-size);
+  text-transform: uppercase;
 }
 
 .RegisterForm .TextGroup {
@@ -45,14 +46,17 @@
 }
 
 .RegisterForm .RadioGroup div {
-  padding: 15px;
-  margin-bottom: 15px;
+  margin: 0px 15px 15px 0;
 }
 
-/* .RegisterForm .RadioGroup div input,
-label {
+.RegisterForm .RadioGroup div input,
+.RegisterForm .RadioGroup label{
   cursor: pointer;
-} */
+}
+
+.RegisterForm .RadioGroup label{
+  margin-left: 5px;
+}
 
 .RegisterForm .CheckboxGroup {
   width: 100%;
@@ -61,9 +65,13 @@ label {
   margin-bottom: 25px;
 }
 
-.RegisterForm .CheckboxGroup input {
-  margin: 0 25px;
+.RegisterForm .CheckboxGroup input,
+.RegisterForm .CheckboxGroup label{
   cursor: pointer;
+}
+
+.RegisterForm .CheckboxGroup input {
+  margin-left: 15px;
 }
 
 .RegisterForm .PaymentGroup {
@@ -77,16 +85,21 @@ label {
 .RegisterForm .FileGroup {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  border: 1px solid var(--primary-color);
+  border-radius: 15px;
+  padding: 25px;
+}
+
+.RegisterForm .FileGroup img {
+  border-radius: 25px;
+  margin-top: 15px;
 }
 
 .RegisterForm .FileGroup input {
-  margin: 15px 0 25px 0;
-  border: 1px solid var(--primary-color);
-  padding: 25px;
+  margin-top: 15px;
   cursor: pointer;
-  border-radius: 15px;
 }
 
 .RegisterForm a {
@@ -102,7 +115,9 @@ label {
 }
 
 .RegisterForm .SubmitBtn {
+  width: 100%;
   padding: 15px;
+  margin: 15px 0;
   border-radius: 15px;
   border: 1px solid var(--primary-color);
   cursor: pointer;
@@ -125,5 +140,9 @@ label {
 
   .RegisterForm h1 {
     font-size: var(--large-text-size);
+  }
+  
+  .RegisterForm .FileGroup {
+    flex-direction: column;
   }
 }
