--- a/app/client/src/styles/courseDetails/page.module.css
+++ b/app/client/src/styles/courseDetails/page.module.css
@@ -69,8 +69,9 @@
     margin-bottom: 25px;
   }
   
-  .description p {
+  .description pre {
     font-size: var(--small-text-size);
+    text-wrap: wrap;
   }
   
   .videosList {
