--- a/app/client/src/styles/courseDetails/page.module.css
+++ b/app/client/src/styles/courseDetails/page.module.css
@@ -1,145 +1,150 @@
 /* Details */
 .content {
-    padding: 100px 100px 25px 100px;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: flext-start;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
-  }
-  
-  .content .textPart {
-    width: 50%;
-  }
-  
-  .content .textPart h3 {
-    font-size: var(--large-text-size);
-    margin-bottom: 25px;
-  }
-  
-  .content .textPart h4 {
-    font-size: var(--medium-text-size);
-  }
-  
-  .content .imgPart {
-    width: 40%;
-    height: 500px;
-    display: flex;
+  padding: 100px 100px 25px 100px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: flext-start;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
+}
+
+.content .textPart {
+  width: 50%;
+}
+
+.content .textPart h3 {
+  font-size: var(--large-text-size);
+  margin-bottom: 25px;
+}
+
+.content .textPart h4 {
+  font-size: var(--medium-text-size);
+}
+
+.content .imgPart {
+  width: 40%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content .imgPart img {
+  width: 100%;
+  height: 80%;
+  background-color: white;
+  border-radius: 25px;
+}
+
+.content .imgPart .purchaseBtn {
+  width: 100%;
+  color: white;
+  font-size: var(--medium-text-size);
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 25px;
+  padding: 15px 0;
+  margin-top: 15px;
+  cursor: pointer;
+  transition: all ease-in-out var(--transation-duration);
+  text-align: center;
+}
+
+.content .imgPart .purchaseBtn:disabled {
+  background-color: var(--secondary-color);
+  cursor: auto;
+}
+
+.content .imgPart .purchaseBtn:hover {
+  background-color: var(--secondary-color);
+}
+
+.description {
+  color: white;
+  padding: 25px 100px;
+}
+
+.description h3 {
+  font-size: var(--large-text-size);
+  margin-bottom: 25px;
+}
+
+.description pre {
+  font-size: var(--small-text-size);
+  text-wrap: wrap;
+}
+
+.videosList {
+  padding: 25px 100px;
+  color: white;
+}
+
+.videosList h3 {
+  font-size: var(--large-text-size);
+  margin-bottom: 25px;
+}
+
+.videosList ul {
+  list-style: none;
+  padding: 15px 25px;
+}
+
+.videosList ul li {
+  color: white;
+  border-bottom: 1px solid white;
+  margin-bottom: 50px;
+  font-size: var(--medium-text-size);
+  cursor: pointer;
+  transition: all ease-in-out var(--transation-duration);
+}
+
+.videosList ul li:hover,
+.videosList ul li:hover a {
+  color: var(--primary-color);
+}
+
+.videosList ul li svg {
+  padding: 5px 5px 0 5px;
+}
+.videosList ul li a {
+  text-decoration: none;
+  color: white;
+  transition: all ease-in-out var(--transation-duration);
+}
+
+@media (max-width: 768px) {
+  .content {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 75px 15px 25px 15px;
   }
-  
-  .content .imgPart img {
+
+  .content .textPart {
     width: 100%;
-    height: 80%;
-    background-color: white;
-    border-radius: 25px;
+    padding: 5%;
   }
-  
-  .content .imgPart .purchaseBtn {
+
+  .content .imgPart {
     width: 100%;
-    color: white;
-    font-size: var(--medium-text-size);
-    background-color: var(--primary-color);
-    border: none;
-    border-radius: 25px;
-    padding: 15px 0;
-    margin-top: 15px;
-    cursor: pointer;
-    transition: all ease-in-out var(--transation-duration);
-    text-align: center;
   }
-  
-  .content .imgPart .purchaseBtn:hover {
-    background-color: var(--secondary-color);
-  }
-  
+
   .description {
-    color: white;
-    padding: 25px 100px;
+    padding: 25px 15px 0 15px;
   }
-  
-  .description h3 {
-    font-size: var(--large-text-size);
-    margin-bottom: 25px;
-  }
-  
-  .description pre {
-    font-size: var(--small-text-size);
-    text-wrap: wrap;
-  }
-  
+
   .videosList {
-    padding: 25px 100px;
-    color: white;
+    padding: 25px 0;
   }
-  
+
   .videosList h3 {
-    font-size: var(--large-text-size);
+    margin: 5px 0 0 15px;
+  }
+
+  .videosList ul li {
     margin-bottom: 25px;
   }
-  
-  .videosList ul {
-    list-style: none;
-    padding: 15px 25px;
-  }
-  
-  .videosList ul li {
-    color: white;
-    border-bottom: 1px solid white;
-    margin-bottom: 50px;
-    font-size: var(--medium-text-size);
-    cursor: pointer;
-    transition: all ease-in-out var(--transation-duration);
-  }
-  
-  .videosList ul li:hover,
-  .videosList ul li:hover a{
-    color: var(--primary-color);
-  }
-  
-  .videosList ul li svg {
-    padding: 5px 5px 0 5px;
-  }
-  .videosList ul li a {
-    text-decoration: none;
-    color: white;
-    transition: all ease-in-out var(--transation-duration);
-  }
-  
-  @media (max-width: 768px) {
-    .content {
-      flex-direction: column;
-      padding: 75px 15px 25px 15px;
-    }
-  
-    .content .textPart {
-      width: 100%;
-      padding: 5%;
-    }
-  
-    .content .imgPart {
-      width: 100%;
-    }
-  
-    .description {
-      padding: 25px 15px 0 15px;
-    }
-  
-    .videosList {
-      padding: 25px 0;
-    }
-  
-    .videosList h3 {
-      margin: 5px 0 0 15px;
-    }
-  
-    .videosList ul li {
-      margin-bottom: 25px;
-    }
-  }
+}
