--- a/app/client/src/styles/dashboard/page.module.css
+++ b/app/client/src/styles/dashboard/page.module.css
@@ -102,20 +102,24 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .createCourseForm {
   width: 600px;
-  background-image: linear-gradient(var(--primary-color), var(--secondary-color));
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-image: linear-gradient(
+    var(--primary-color),
+    var(--secondary-color)
+  );
   padding: 25px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation-name: ShowForm;
+  animation-duration: 0.3s;
 }
 
 .createCourseForm .formTitle {
@@ -126,7 +130,7 @@
 .createCourseForm input,
 .createCourseForm select,
 .createCourseForm button,
-.createCourseForm textarea{
+.createCourseForm textarea {
   width: 100%;
   height: 50px;
   padding: 15px;
@@ -198,7 +202,7 @@
   align-items: center;
 }
 
-.coursesTable table tbody tr .OperationCell button{
+.coursesTable table tbody tr .OperationCell button {
   font-size: 32px;
   transition: all ease-in-out var(--transation-duration);
   border: none;
@@ -220,4 +224,13 @@
 
 .DeleteBtn:hover {
   color: rgb(180, 0, 0);
+}
+
+@keyframes ShowForm {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
