--- a/app/client/src/styles/dashboard/page.module.css
+++ b/app/client/src/styles/dashboard/page.module.css
@@ -30,38 +30,46 @@
   margin-bottom: 25px;
 }
 
-.coursesTable {
+.coursesTable ,
+.videosTable {
   width: 100%;
   height: 100vh;
 }
 
-.coursesTable table {
+.coursesTable table ,
+.videosTable table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
   background-color: white;
 }
 
-.coursesTable table tbody {
+.coursesTable table tbody ,
+.videosTable table tbody {
   color: black;
 }
 
 .coursesTable table td,
-.coursesTable table th {
+.coursesTable table th,
+.videosTable table td,
+.videosTable table th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
 }
 
-.coursesTable table th {
+.coursesTable table th,
+.videosTable table th {
   background-color: var(--primary-color);
 }
 
-.coursesTable table tr:nth-child(even) {
+.coursesTable table tr:nth-child(even),
+.videosTable table tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.coursesTable table tr div a {
+.coursesTable table tr div a,
+.videosTable table tr div a {
   font-size: 15px;
 }
 
@@ -95,7 +103,8 @@
   background-color: var(--secondary-color);
 }
 
-.createCourseFormOverlay {
+.createCourseFormOverlay,
+.createVideoFormOverlay {
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -107,7 +116,8 @@
   align-items: center;
 }
 
-.createCourseForm {
+.createCourseForm,
+.createVideoForm {
   width: 600px;
   background-image: linear-gradient(
     var(--primary-color),
@@ -122,7 +132,8 @@
   animation-duration: 0.3s;
 }
 
-.createCourseForm .formTitle {
+.createCourseForm .formTitle,
+.createVideoForm .formTitle {
   font-size: var(--medium-text-size);
   margin-bottom: 25px;
 }
@@ -130,7 +141,10 @@
 .createCourseForm input,
 .createCourseForm select,
 .createCourseForm button,
-.createCourseForm textarea {
+.createCourseForm textarea,
+.createVideoForm input,
+.createVideoForm button,
+.createVideoForm textarea {
   width: 100%;
   height: 50px;
   padding: 15px;
@@ -140,34 +154,40 @@
   margin-bottom: 15px;
 }
 
-.createCourseForm textarea {
+.createCourseForm textarea,
+.createVideoForm textarea {
   height: 100px;
 }
 
-.createCourseForm button {
+.createCourseForm button,
+.createVideoForm button {
   color: white;
   cursor: pointer;
   background-color: var(--secondary-color);
   transition: all ease-in-out var(--transation-duration);
 }
 
-.createCourseForm button:hover {
+.createCourseForm button:hover,
+.createVideoForm button:hover {
   fill-opacity: 0.5;
   background-color: var(--primary-color);
 }
 
-.createCourseForm .formHeader {
+.createCourseForm .formHeader,
+.createVideoForm .formHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
 }
 
-.createCourseForm .formHeader button {
+.createCourseForm .formHeader button,
+.createVideoForm .formHeader button {
   width: 20%;
 }
 
-.createCourseForm .fileGroup {
+.createCourseForm .fileGroup,
+.createVideoForm .fileGroup {
   width: 100%;
   padding: 25px;
   border: 1px solid var(--secondary-color);
@@ -202,7 +222,8 @@
   align-items: center;
 }
 
-.coursesTable table tbody tr .OperationCell button {
+.coursesTable table tbody tr .OperationCell button,
+.videosTable table tbody tr .OperationCell button {
   font-size: 32px;
   transition: all ease-in-out var(--transation-duration);
   border: none;
