--- a/app/client/src/styles/watch/page.module.css
+++ b/app/client/src/styles/watch/page.module.css
@@ -1,7 +1,8 @@
 .videoContainer {
   position: relative;
-  width: 90%;
-  max-width: 1000px;
+  height: 100vh;
+  /* width: 90%;
+  max-width: 1000px; */
   display: flex;
   justify-content: center;
   margin-inline: auto;
@@ -153,3 +154,15 @@
   width: 100%;
   height: 100%;
 }
+
+.videosList {
+  background-color: rgba(0, 0, 0, 0.75);
+  color: var(--primary-color);
+  font-size: var(--small-text-size);
+  padding: 15px;
+  border-radius: 15px;
+}
+
+.videoInfo {
+  padding: 25px;
+} 
